objects/TASKRAY__trOnHoldHistory__c.object
<CustomObject>
    <description>Premium edition feature. Detail record to the TaskRay Project. Used for tracking on-hold activity.</description>
    <fields>
        <fullName>TASKRAY__trActiveOnHold__c</fullName>
        <formula>IF(NOT(ISBLANK(TASKRAY__trOnHoldDate__c)) &amp;&amp; ISBLANK(TASKRAY__trResumedDate__c), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active On-Hold History Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trHeldBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Held By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TaskRay_On_Hold_Initiated</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trOnHoldDate__c</fullName>
        <label>On-Hold Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trOnHoldDuration__c</fullName>
        <formula>IF(NOT(ISBLANK(TASKRAY__trResumedDate__c)) &amp;&amp; NOT(ISBLANK(TASKRAY__trOnHoldDate__c)) &amp;&amp; TASKRAY__trActiveOnHold__c = false &amp;&amp; (TASKRAY__trResumedDate__c - TASKRAY__trOnHoldDate__c + 1) &gt; 0, (TASKRAY__trResumedDate__c - TASKRAY__trOnHoldDate__c + 1), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration (days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trOnHoldNotes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trOnHoldReason__c</fullName>
        <label>On-Hold Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Deferred Project Start</fullName>
                </value>
                <value>
                    <fullName>Customer Requested Hold</fullName>
                </value>
                <value>
                    <fullName>Lost Contact with Customer</fullName>
                </value>
                <value>
                    <fullName>Resource Constraints</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TASKRAY__trProject__c</fullName>
        <label>TaskRay Project</label>
        <referenceTo>TASKRAY__Project__c</referenceTo>
        <relationshipLabel>On-Hold History</relationshipLabel>
        <relationshipName>TaskRay_On_Hold_History_Records</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trResumedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resumed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TaskRay_On_Hold_Resumed</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trResumedDate__c</fullName>
        <label>Resumed Date</label>
        <type>Date</type>
    </fields>
    <label>TaskRay On-Hold History</label>
    <listViews>
        <fullName>TASKRAY__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OH-{000000}</displayFormat>
        <label>On-Hold History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TaskRay  On-Hold History Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>